tests/baselines/reference/parserSkippedTokens18.errors.txt
==== tests/cases/compiler/parserSkippedTokens18.ts (5 errors) ====
    foo(a \
          ~
!!! parserSkippedTokens18.ts(1,7): error TS1001: Unexpected character "\".
          ~
!!! parserSkippedTokens18.ts(1,7): error TS1005: ',' expected.
           
!!! parserSkippedTokens18.ts(1,8): error TS1005: ')' expected.
    ~~~
!!! parserSkippedTokens18.ts(1,1): error TS2095: Cannot find name 'foo'.
        ~
!!! parserSkippedTokens18.ts(1,5): error TS2095: Cannot find name 'a'.